--- a/css/clock.css
+++ b/css/clock.css
@@ -534,6 +534,7 @@ font-size: 18px;
     top: 35px;
     display: flex;
     align-items: center;
+    justify-content:center;
     font-size: 9px;
 }
 
